# geo-utils

./: .gitignore  README.md  pyproject.toml
src/geo_utils/: __init__.py
src/geo_utils/base/: __init__.py  _utils.py  fsys.py  log.py  s3.py
src/geo_utils/coords/: __init__.py  crs.py
src/geo_utils/geoms/: lines.py
src/geo_utils/spatial/: __init__.py  coords.py  sref.py  um.py
